test/libsolidity/syntaxTests/types/address/state_variable_address_transient_payable.sol
contract C {
    address transient payable a;
}
// ----
// ParserError 2314: (32-39): Expected ';' but got 'payable'
